[project]
name = "tradestation"
version = "0.1"
description = "An unofficial Python SDK for Tradestation!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.7",
    "sphinx>=8.0.2",
]
